# departmentsense-ai

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
apps/web/: components.json  package.json  playwright.config.ts
apps/web/app/: layout.tsx  not-found.tsx  page.tsx
apps/web/app/auth/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/components/: detail-task-card.tsx  flux-card-hero.tsx  intro-disclosure.tsx  not-found.tsx  theme-provider.tsx  wizard-form.tsx
apps/web/components/ai/: chain-of-thought.tsx  disclosure.tsx  shimmer.tsx
apps/web/components/auth/: auth-page.tsx
apps/web/components/charts/: area-chart.tsx  bar-chart.tsx  bar-x-axis.tsx  bar-y-axis.tsx  candlestick-chart.tsx  funnel-chart.tsx  line-chart.tsx  live-line-chart.tsx  pie-center.tsx  pie-chart.tsx  ring-center.tsx  x-axis.tsx
apps/web/components/dashboard/: admin-overview.tsx  app-breadcrumb.tsx  app-header.tsx  app-shared.tsx  app-shell.tsx  app-sidebar.tsx  logo.tsx  (+7 more)
apps/web/hooks/: use-controllable-state.ts
apps/web/lib/: api.ts  mock-data.ts  pdf.ts  role-context.tsx  use-complaints.ts
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  database.py  main.py  schemas.py  seed.py
backend/app/models/: __init__.py  complaint.py  department.py  user.py
backend/app/routers/: auth.py  complaints.py  departments.py  pdf.py  ws.py
backend/app/services/: classifier.py  dept_loader.py  pdf_generator.py  security.py  ws_manager.py
docs/: 92-departments.json  idea.md  system-architecture.md  task.md  ui-directions.md
(+31 files in other folders)
