[project]
name = "departmentsense-backend"
version = "0.1.0"
description = "AI-based citizen grievance classification API"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "greenlet>=3.1.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.2",
    "reportlab>=4.2.5",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "websockets>=13.1",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.46.0",
    "torch>=2.4.0",
    "sentencepiece>=0.2.0",
]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
